<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/silahkan_login_untuk_melanjutkan"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="15dp"
        android:background="@drawable/bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textStyle="bold"
            android:textSize="12pt"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_admin"
            android:textColor="#fff"/>

        <LinearLayout
            android:paddingTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginRight="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_user"/>

            <EditText
                android:id="@+id/username"
                android:paddingLeft="15dp"
                android:textSize="10pt"
                android:background="@drawable/bg_form"
                android:hint="@string/username"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="20dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginRight="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_vpn_key_black_24dp"/>

            <EditText
                android:id="@+id/password"
                android:paddingLeft="15dp"
                android:textSize="10pt"
                android:background="@drawable/bg_form"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>

        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:layout_gravity="right"
                    android:id="@+id/btn_login"
                    android:background="@drawable/bg_form"
                    android:textStyle="bold"
                    android:textColor="#FF9800"
                    android:text="@string/login"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="Belum memiliki akun admin silahkan klik link registrasi."/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="link_registrasi"
                android:textStyle="bold"
                android:textColor="#0026FF"
                android:textSize="20sp"
                android:text="Di sini"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>