<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F1F1F1"
    tools:context=".AdminActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg_dashboard_top"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/logo_admin"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <LinearLayout
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_dashboard"
                    android:textSize="20dp"
                    android:textColor="#fff"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin"
                    android:textColor="#fff"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_container"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_dashboard"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/btn_kelolaData"
                android:layout_marginLeft="20dp"
                android:onClick="btn_kakao"
                android:background="#FFC107"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:background="@drawable/ic_kakao"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <TextView
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelola_data_kakao"/>

            </LinearLayout>

            <LinearLayout
                android:onClick="btn_penyakit"
                android:layout_marginLeft="10dp"
                android:background="#FFC107"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ic_penykait" />

                <TextView
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelola_data_penyakit"/>

            </LinearLayout>

            <LinearLayout
                android:onClick="btn_hama"
                android:layout_marginLeft="10dp"
                android:background="#FFC107"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="51dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ic_hama" />

                <TextView
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelola_data_hama"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_dataAdmin"
                android:onClick="btn_admin"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:background="#FFC107"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:background="@drawable/ic_user"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <TextView
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:textSize="14dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_admin"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="350dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_sipehaka"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

        <TextView
            android:id="@+id/textSipehaka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="Sistem Informasi Penyakit Hama Kakao"/>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btn_logout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="Logout"
            android:background="@drawable/bg_btn_logout"
            android:textAllCaps="false"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/fab_tambahAdmin"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="25dp"
        android:src="@drawable/ic_add" />

</RelativeLayout>